avcodec/dvbsubenc: fix end of 8-bit/pixel-code-string

Fixes ticket #11606.

Signed-off-by: Marton Balint <cus@passwd.hu>